<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019-2020 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Themes</string>

    <!-- Footer -->
    <string name="schedule_footer_info">When setting a schedule, always set the first schedule time closes to your current time.\n\nFor example:\nIf the current time is 4:00pm and you want to set a schedule from 6:00am to 6:00pm, you would set the first theme to 6:00pm, then the second theme to 6:00am.</string>

    <!-- Accent Picker -->
    <string name="theme_accent_picker_default">Default</string>

    <!-- Navbar Picker -->
    <string name="theme_navbar_picker_title">Navbar style</string>
    <string name="theme_navbar_picker_summary">Select navbar style</string>
    <string name="theme_navbar_picker_oneplus">OnePlus</string>
    <string name="theme_navbar_picker_oneui">One UI</string>
    <string name="theme_navbar_picker_tecno">Tecno Camon</string>
    <string name="theme_navbar_picker_asus">ASUS</string>
    <string name="theme_navbar_picker_android">Android</string>
    <string name="theme_navbar_picker_moto">Moto</string>
    <string name="theme_navbar_picker_nexus">Nexus</string>
    <string name="theme_navbar_picker_old">Old</string>
    <string name="theme_navbar_picker_sammy">Samsung</string>

    <!-- Accent Picker -->
    <string name="theme_picker_default">Default</string>
    <string name="accent_color">Accent picker</string>
    <string name="accent_color_summary">Choose the accent color yourself</string>

    <!-- Dark theme -->
    <string name="dark_theme_title">Dark theme</string>

    <!-- Fonts -->
    <string name="font_type_title">Font type</string>
    <string name="font_type_summary">Select font type</string>
    <string name="font_type_default">Default</string>
    <string name="font_type_2">Noto Serif / Source Sans Pro</string>
    <string name="font_type_3">Aclonica</string>
    <string name="font_type_4">Amarante</string>
    <string name="font_type_5">Arvolato</string>
    <string name="font_type_6">Bariol</string>
    <string name="font_type_7">Cagliostro</string>
    <string name="font_type_8">CircularStd</string>
    <string name="font_type_9">Comic Sans</string>
    <string name="font_type_10">Comfortaa</string>
    <string name="font_type_11">Cool Story</string>
    <string name="font_type_12">Exotwo</string>
    <string name="font_type_13">Fira Sans</string>
    <string name="font_type_14">Google Sans</string>
    <string name="font_type_15">LG Smart Gothic</string>
    <string name="font_type_16">Rosemary</string>
    <string name="font_type_17">Rubik</string>
    <string name="font_type_18">Samsung One</string>
    <string name="font_type_19">San Francisco Pro</string>
    <string name="font_type_20">OnePlus Slate</string>
    <string name="font_type_21">Sony Sketch</string>
    <string name="font_type_22">Storopia</string>
    <string name="font_type_23">Surfer</string>
    <string name="font_type_24">Ubuntu</string>
    <string name="font_type_25">Linotte</string>

    <!-- Adaptive icon shapes -->
    <string name="adaptive_icon_shape_default">Default</string>
    <string name="adaptive_icon_shape_teardrop">Teardrop</string>
    <string name="adaptive_icon_shape_squircle">Squircle</string>
    <string name="adaptive_icon_shape_roundedrect">Rounded Rectangle</string>
    <string name="adaptive_icon_shape_cylinder">Cylinder</string>
    <string name="adaptive_icon_shape_hexagon">Hexagon</string>
    <string name="adaptive_icon_shape_roundedhexagon">Rounded Hexagon</string>
    <string name="adaptive_icon_shape_pebble">Pebble</string>
    <string name="adaptive_icon_shape_taperedrect">Tapered Rect</string>
    <string name="adaptive_icon_shape_vessel">Vessel</string>
    <string name="adaptive_icon_shape_title">Icon shape</string>
    <string name="adaptive_icon_shape_dialog_title">Select icon shape</string>

    <!-- QS tile styles -->
    <string name="qs_tile_style_title">QS tile style</string>
    <string name="qs_tile_style_default">Default</string>
    <string name="qs_tile_style_square">Square</string>
    <string name="qs_tile_style_squircletrim">Squircle with trim</string>
    <string name="qs_tile_style_diamond">Diamond</string>
    <string name="qs_tile_style_star">Star</string>
    <string name="qs_tile_style_gear">Gear</string>
    <string name="qs_tile_style_badge">Badge</string>
    <string name="qs_tile_style_badgetwo">Badge two</string>
    <string name="qs_tile_style_circletrim">Circle with trim</string>
    <string name="qs_tile_style_dualtonecircletrim">Dual-toned circle</string>
    <string name="qs_tile_style_cookie">Cookie</string>
    <string name="qs_tile_style_circleoutline">Circle outline</string>
    <string name="qs_tile_style_wavey">Wavey</string>
    <string name="qs_tile_style_ninja">Ninja</string>
    <string name="qs_tile_style_dottedcircle">Dotted circle</string>
    <string name="qs_tile_style_attemptmountain">Attempt mountain</string>
    <string name="qs_tile_style_inkdrop">Ink drop</string>
    <string name="qs_tile_style_neonlike">Neon light</string>
    <string name="qs_tile_style_triangles">Triangles</string>
    <string name="qstile_cosmos">Oxygen</string>
    <string name="qstile_divided">Divided Circle</string>
    <string name="qstile_oos">Cosmos</string>

    <!-- Statusbar icons -->
    <string name="statusbar_icons_default">Default</string>
    <string name="statusbar_icons_filled">Filled</string>
    <string name="statusbar_icons_rounded">Rounded</string>
    <string name="statusbar_icons_circular">Circular</string>
    <string name="statusbar_icons_kai">Kai</string>
    <string name="statusbar_icons_sam">Sam</string>
    <string name="statusbar_icons_victor">Victor</string>
    <string name="statusbar_icons_title">Statusbar/QS icons</string>
    <string name="statusbar_icons_dialog_title">Select statusbar icon set</string>

    <!-- QS header style -->
    <string name="qs_header_style_default">Default</string>
    <string name="qs_header_style_grey">Grey</string>
    <string name="qs_header_style_lightgrey">Light Grey</string>
    <string name="qs_header_style_accent">Accent Color</string>
    <string name="qs_header_style_transparent">Transparent</string>
    <string name="qs_header_style_title">QS Header style</string>
    <string name="qs_header_style_dialog_title">Select QS header style set</string>

    <!-- Switch styles -->
    <string name="switch_style_title">Switch style</string>
    <string name="switch_default">Default</string>
    <string name="switch_md2">Material Design 2</string>
    <string name="switch_oneplus">OnePlus</string>
    <string name="switch_tg">Telegram</string>
    <string name="switch_narrow">Narrow</string>
    <string name="switch_contained">Contained</string>
    <string name="switch_retro">Retro</string>
    <string name="switch_stockish">Stockish</string>
    <string name="switch_style_dialog_title">Select switch style set</string>

    <!-- Themes -->
    <string name="theme_type_title">System theme</string>
    <string name="theme_type_summary">Select theme</string>
    <string name="theme_type_light">Light</string>
    <string name="theme_type_google_dark">Google dark</string>
    <string name="theme_type_pitch_black">Pitch black</string>
    <string name="theme_type_solarized_dark">Solarized dark</string>
    <string name="theme_type_choco_x">Choco X</string>
    <string name="theme_type_baked_green">Baked green</string>
    <string name="theme_type_dark_grey">Dark grey</string>
    <string name="theme_type_material_ocean">Material ocean</string>
    <string name="theme_type_corvus_clear">Corvus clear</string>
    <string name="theme_other_category_title">Other</string>
    <string name="theme_button_delete_theme">Delete theme</string>
    <string name="theme_switch_persistent_title">Persistent switches state</string>
    <string name="theme_reset_dialog_title">Reset theme options</string>
    <string name="theme_reset_dialog_message">All theme options will be reset to default. Schedule will not be affected by this.</string>
    <string name="theme_reset_toast">Theme options back to default</string>

    <!-- Theme schedule -->
    <string name="theme_schedule_title">Schedule</string>
    <string name="theme_schedule_summary">Set a schedule for system themes</string>
    <string name="theme_schedule_dyn_summary">theme is scheduled</string>
    <string name="theme_schedule_theme_title">Schedule theme</string>
    <string name="theme_schedule_theme_summary">Select a theme to schedule</string>
    <string name="theme_schedule_none">None</string>
    <string name="theme_schedule_custom_time">Turns on at a custom time</string>
    <string name="theme_schedule_applied">theme applied</string>
    <string name="theme_schedule_start_scheduled">theme starts at</string>
    <string name="theme_schedule_repeat_title">Repeat schedule</string>
    <string name="theme_schedule_repeat_summary">Repeats the schedule daily</string>
    <string name="theme_schedule_toasts_title">Show toasts</string>
    <string name="theme_schedule_toasts_summary">Show toasts when scheduled themes are launched</string>

    <!-- gvisual mod -->
    <string name="gvisual_title">G-Visual Mod</string>
    <string name="gvisual_summary">Change Statusbar Height and UI Roundness</string>
    <string name="rounded_ui_title">Rounded corner</string>
    <string name="rounded_ui_dialog_title">Select rounded corner model</string>
    <string name="rounded_style_default">Default</string>
    <string name="rounded_style_rectangle">Rectangle</string>
    <string name="rounded_style_large">Large</string>
    <string name="rounded_style_medium">Medium</string>
    <string name="statusbar_height_title">Statusbar height</string>
    <string name="statusbar_height_dialog_title">Select statusbar height model</string>
    <string name="sb_height_default">Default</string>
    <string name="sb_height_medium">Medium</string>
    <string name="sb_height_large">Large</string>
    <string name="sb_height_extralarge">Extra Large</string>

</resources>
